# open-finance-next-gen

./: .dockerignore  .drone.yml  .gitignore  Dockerfile.backend  README-demo.md  README.md  docker-compose.yml  makefile
backend/: .env.example  dependencies.py  main.py  pyproject.toml
backend/data/scenarios/fridaklo/: balanced.json  mongodb_bank_balanced.json  mongodb_bank_overspender.json  mongodb_bank_saver.json  overspender.json  saver.json
backend/data/scenarios/hellyrig/: balanced.json  overspender.json  saver.json
backend/data/seed/: mcc_codes.json
backend/database/: connection.py  encrypted_connection.py
backend/encoder/: json_encoder.py
backend/routers/: debug.py  demo.py  encryption_demo.py
backend/routers/open_finance/: consents.py  customer_data.py  institutions.py  public.py  secure.py
backend/services/: auth.py
backend/services/aggregations/: account_aggregations.py  product_aggregations.py
backend/services/consents/: __init__.py  consent_service.py  consent_state_machine.py  consent_sweeper.py  consent_validator.py
backend/services/institutions/: __init__.py  institution_service.py
backend/services/internal/: accounts_service.py  credit_bureau_service.py  mcc_classification_service.py  portability_rules_service.py  product_service.py  scenario_service.py  spending_best_practices_service.py  transactions_service.py  users_service.py
backend/services/open_finance/: __init__.py  cached_data_service.py  customer_data_service.py  customer_identification_service.py  repayment_history_service.py
backend/utils/: security.py
(+17 files in other folders)
