[tool.poetry]
name = "your-virtual-env"
version = "0.1.0"
description = "This repository hosts the backend for Leafy Bank's Open Finance demo service."
authors = ["Julian Boronat <julian.boronat@mongodb.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pymongo = "^4.10.1"
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"