[tool.poetry]
name = "your-virtual-env"
version = "0.1.0"
description = "This repository hosts the backend for Leafy Bank's Open Finance demo service."
authors = ["Julian Boronat <julian.boronat@mongodb.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pymongo = {version = "^4.10.1", extras = ["encryption"]}
python-dotenv = "^1.0.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
slowapi = "^0.1.9"
voyageai = {version = "^0.3.2", python = "<3.14"}
pymongo-auth-aws = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"